fix horizontal scrollbar on certain pages

--- a/threejs/lessons/resources/lesson.css
+++ b/threejs/lessons/resources/lesson.css
@@ -80,7 +80,7 @@ div[data-diagram] {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: -100;
 }
